--- a/.github/workflows/publish-commit-bottles.yml
+++ b/.github/workflows/publish-commit-bottles.yml
@@ -40,7 +40,11 @@ jobs:
           cd $(brew --repository ${{github.repository}})
           git fetch origin +refs/pull/${{ github.event.client_payload.pull_request }}/head:current-pr
           git rebase current-pr master
-          git show
+          MESSAGE="$(git log HEAD^.. --format=%B)
+
+          Closes #${{github.event.client_payload.pull_request}}."
+          git commit --amend --signoff --allow-empty -m "$MESSAGE"
+          git show --pretty=fuller
       - name: Download artifacts
         uses: Homebrew/actions/download-artifact@master
         with:
@@ -63,10 +67,6 @@ jobs:
         run: |
           cd $(brew --repo ${{github.repository}})
           git rebase --force origin/master
-          MESSAGE="$(git log HEAD^.. --format=%B)
-
-          Closes #${{github.event.client_payload.pull_request}}."
-          git commit --amend --signoff --allow-empty -m "$MESSAGE"
           git show --pretty=fuller
           for try in $(seq 5); do
             git fetch
